# sp1-ics07-tendermint

./: .env.example  .gitattributes  .gitignore  .gitmodules  .solhint.json  Cargo.toml  LICENSE-MIT  README.md  bun.lockb  foundry.toml  justfile  package.json  remappings.txt  rust-toolchain.toml  shell.nix
.github/: CODEOWNERS
.github/workflows/: e2e.yml  foundry-test.yml  program.yml  programs.yml  release.yml  rust.yml  upload-artifacts.yml  upload-programs.yml
contracts/: .gitignore  foundry.toml
contracts/abi/: SP1ICS07Tendermint.json
contracts/fixtures/: e2e_misbehaviour_fixture.json  fixture.json  membership_100-groth16_fixture.json  membership_100_fixture.json  membership_10_fixture.json  membership_25-plonk_fixture.json  membership_25_fixture.json  membership_50_fixture.json  memberships_fixture-groth16.json  memberships_fixture-plonk.json  memberships_fixture.json  misbehaviour_breaking_time_monotonicity-groth16_fixture.json  misbehaviour_breaking_time_monotonicity_fixture.json  misbehaviour_double_sign-plonk_fixture.json  misbehaviour_double_sign_fixture.json  misbehaviour_fixture.json  mock_fixture.json  mock_memberships_fixture.json  mock_uc_and_memberships_fixture.json  mock_update_client_fixture.json  mock_verify_membership_fixture.json  mock_verify_non_membership_fixture.json  uc_and_memberships_fixture-groth16.json  uc_and_memberships_fixture-plonk.json  uc_and_memberships_fixture.json  union_membership_fixture.json  union_nonmembership_fixture.json  update_client_fixture-groth16.json  update_client_fixture-plonk.json  update_client_fixture.json  verify_membership_fixture.json  verify_non_membership_fixture.json
contracts/ibc-lite-shared/ics07-tendermint/: ICS07Tendermint.sol
contracts/script/: SP1ICS07Tendermint.s.sol  SP1Tendermint.s.sol  genesis.json
contracts/src/: ISP1ICS07Tendermint.sol  SP1ICS07Tendermint.sol
contracts/src/errors/: ISP1ICS07TendermintErrors.sol
contracts/src/ics07-tendermint/: ICS07Tendermint.sol  MembershipProgram.sol  MisbehaviourProgram.sol  UcAndMembershipProgram.sol  UpdateClientProgram.sol  VerifyMembershipProgram.sol
contracts/src/msgs/: IICS07TendermintMsgs.sol  IMembershipMsgs.sol  IMisbehaviourMsgs.sol  ISP1Msgs.sol  IUcAndMembershipMsgs.sol  IUpdateClientMsgs.sol
contracts/src/utils/: Paths.sol  UnionMembership.sol
contracts/test/: LargeMembership.t.sol  Membership.t.sol  MembershipTest.sol  Misbehaviour.t.sol  MisbehaviourTest.t.sol  MultiMembership.t.sol  SP1ICS07MultiMembership.t.sol  SP1ICS07Tendermint.t.sol  SP1ICS07TendermintTest.sol  SP1ICS07UpdateClient.t.sol  SP1ICS07VerifyMembership.t.sol  SP1ICS07VerifyNonMembership.t.sol  UcAndMembership.t.sol  UnionMembership.t.sol  UpdateClient.t.sol  VerifyMembership.t.sol
e2e/artifacts/circuits/v2.0.0/: PlonkVerifier.sol  SP1VerifierPlonk.sol  SP1_COMMIT  constraints.json  plonk_witness.json
e2e/interchaintestv8/: .golangci.yml  README.md  basic_test.go  go.mod  go.sum  sp1_ics07_test.go
e2e/interchaintestv8/chainconfig/: chain_config.go  encoding.go  genesis.go
e2e/interchaintestv8/e2esuite/: suite.go  utils.go
e2e/interchaintestv8/operator/: genesis.go  operator.go  proofs.go
e2e/interchaintestv8/testvalues/: values.go
e2e/interchaintestv8/types/: utils.go
e2e/interchaintestv8/types/sp1ics07tendermint/: contract.go
elf/: membership-riscv32im-succinct-zkvm-elf  riscv32im-succinct-zkvm-elf  uc-and-membership-riscv32im-succinct-zkvm-elf  update-client-riscv32im-succinct-zkvm-elf  verify-membership-riscv32im-succinct-zkvm-elf
operator/: Cargo.toml  build.rs
operator/src/: lib.rs  programs.rs  prover.rs  rpc.rs  util.rs
operator/src/cli/: command.rs
operator/src/helpers/: light_block.rs  mod.rs  union.rs
operator/src/runners/: genesis.rs  mod.rs  operator.rs
operator/src/runners/fixtures/: membership.rs  misbehaviour.rs  mod.rs  uc_and_mem.rs  update_client.rs  verify_membership.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: lib.rs  main.rs
program/src/types/: mod.rs  output.rs
programs/membership/: Cargo.toml
programs/membership/src/: lib.rs  main.rs
programs/misbehaviour/: Cargo.toml
programs/misbehaviour/src/: lib.rs  main.rs
programs/misbehaviour/src/types/: validation.rs
programs/uc-and-membership/: Cargo.toml
programs/uc-and-membership/src/: lib.rs  main.rs
programs/update-client/: Cargo.toml
programs/update-client/src/: lib.rs  main.rs
programs/update-client/src/types/: output.rs  validation.rs
programs/verify-membership/: Cargo.toml
programs/verify-membership/src/: main.rs
programs/verify-membership/src/types/: validation.rs
shared/: Cargo.toml
shared/src/types/: ics07_tendermint.rs
