[workspace]
members = [
    "programs/*",
    "packages/*",
    "operator/",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/srdtrk/sp1-ics07-tendermint"
keywords      = ["cosmos", "ibc", "sp1", "tendermint", "ethereum", "bridge"]
authors       = ["srdtrk <srdtrk@hotmail.com>"]

[workspace.dependencies]
# Used by the programs
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }

sp1-ics07-tendermint-shared = { path = "./packages/shared/" }
sp1-ics07-tendermint-update-client = { path = "./programs/update-client/" }

tendermint-light-client-verifier = { version = "0.36.0", default-features = false }
ibc-client-tendermint = { version = "0.53.0", default-features = false, features = ["serde"] }
ibc-core-host = { version = "0.53.0", default-features = false }
ibc-core-client = { version = "0.53.0", default-features = false }
ibc-primitives = { version = "0.53.0", default-features = false }
ibc-core-handler-types = { version = "0.53.0", default-features = false }
ibc-client-tendermint-types = { version = "0.53.0", default-features = false }

serde = { version = "1.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
alloy-sol-types = "0.7.2"
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Used by the operator
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tendermint = { version = "0.36.0", default-features = false }
ibc-core-client-types = { version = "0.53.0", default-features = false }
ibc-core-commitment-types = { version = "0.53.0", default-features = false }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
# tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
#     "rust-crypto",
# ] }
alloy-primitives = "0.7.2"
bincode = "1.3.3"
itertools = "0.12.1"
dotenv = "0.15.0"
subtle-encoding = "0.5.1"
ethers = "2.0.14"
anyhow = "1.0.82"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4.21"
async-trait = "0.1.80"
hex = "0.4.3"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
