[workspace]
members = [
    "programs/*",
    "packages/*",
    "operator/",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/srdtrk/sp1-ics07-tendermint"
keywords      = ["cosmos", "ibc", "sp1", "tendermint", "ethereum", "bridge"]
authors       = ["srdtrk <srdtrk@hotmail.com>"]

[workspace.dependencies]
# Used by the programs
sp1-zkvm = "2.0"

sp1-ics07-tendermint-solidity = { path = "./packages/solidity/" }
sp1-ics07-tendermint-update-client = { path = "./programs/update-client/" }
sp1-ics07-tendermint-membership = { path = "./programs/membership/" }
sp1-ics07-tendermint-uc-and-membership = { path = "./programs/uc-and-membership/" }
sp1-ics07-tendermint-misbehaviour = { path = "./programs/misbehaviour/" }

# ibc-proto
ibc-proto = { version = "0.47", default-features = false }

# tendermint-rs
tendermint-light-client-verifier = { version = "0.38", default-features = false }

# ibc-rs
ibc-client-tendermint = { version = "0.54", default-features = false, features = ["serde"] }
ibc-core-host-types = { version = "0.54", default-features = false }
ibc-core-client = { version = "0.54", default-features = false }
ibc-primitives = { version = "0.54", default-features = false }
ibc-core-handler-types = { version = "0.54", default-features = false }
ibc-client-tendermint-types = { version = "0.54", default-features = false }
ibc-core-commitment-types = { version = "0.54", default-features = false }

# Union
unionlabs = { git = "https://github.com/unionlabs/union", rev = "4a6e7229b78de70742cf719fb26409cab3cca631" }

# Other dependencies
serde = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
alloy-sol-types = "0.8"
serde_cbor = "0.11"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Used by the operator
sp1-sdk = "2.0"
sp1-helper = "2.0"

sp1-ics07-tendermint-utils = { path = "./packages/utils/" }

# cosmos-sdk-proto
cosmos-sdk-proto = { version = "0.23", default-features = false }

# tendermint-rs
tendermint = { version = "0.38", default-features = false }
tendermint-rpc = { version = "0.38", features = ["http-client"] }

# ibc-rs
ibc-core-client-types = { version = "0.54", default-features = false }
ibc-core-host-cosmos = { version = "0.54", default-features = false }

# Other dependencies
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
alloy-primitives = "0.8"
alloy-contract = "0.4"
alloy-node-bindings = "0.4"
alloy = "0.4"
bincode = "1.3"
dotenv = "0.15"
subtle-encoding = "0.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
log = "0.4"
async-trait = "0.1"
hex = "0.4"
prost = { version = "0.13", default-features = false }
futures = "0.3"
serde_with = { version = "3.9", features = ["hex"] }

[patch.crates-io]
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.9.8" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", branch = "patch-ecdsa-v0.16.9" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", branch = "patch-v4.1.1" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", branch = "patch-curve25519-v4.1.3" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
