[package]
name = "sp1-ics07-tendermint-uc-and-membership"
description = "Update client and verify (non)membership program for sp1-ics07-tendermint"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
sp1-zkvm = { workspace = true }
ibc-core-commitment-types = { workspace = true }
ibc-client-tendermint-types = { workspace = true }
alloy-sol-types = { workspace = true }
sp1-ics07-tendermint-solidity = { workspace = true }
sp1-ics07-tendermint-update-client = { workspace = true }
sp1-ics07-tendermint-membership = { workspace = true }
ibc-proto = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }
