[package]
name = "sp1-ics07-tendermint-verify-membership"
description = "Verify membership program for sp1-ics07-tendermint"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
sp1-zkvm = { workspace = true }
ibc-core-commitment-types = { workspace = true }
alloy-sol-types = { workspace = true }
